<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sawers.gregory.musicmaker.SavedLyricsActivity" >
    <item android:id="@+id/new_lyrics"
        android:title="@string/new_lyrics"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
