<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sawers.gregory.musicmaker.LyricWriter" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/key_change"
        android:title="Key"
        android:showAsAction="withText|always"/>
    <item android:id="@+id/save_lyrics"
        android:title="@string/save_text"
        android:showAsAction="withText|always"/>
</menu>
