<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sawers.gregory.musicmaker.CreateNewLyricsDialog">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_lyric_edit_text"
        android:layout_centerVertical="true"
        android:hint="@string/file_name"
        android:textColorHint="#11b0a6"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
